--- a/src/ckanext-regx/ckanext/regx/templates/admin_all_user_profiles.html
+++ b/src/ckanext-regx/ckanext/regx/templates/admin_all_user_profiles.html
@@ -8,6 +8,9 @@
         width: 100%;
         margin: 20px 0;
         border-collapse: collapse;
+        border-radius: 5px;
+        overflow: hidden;
+        border: 1px solid #ddd;
     }
 
     .dataTable th {
