--- a/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
+++ b/src/ckanext-regx/ckanext/regx/templates/update_claim_form.html
@@ -6,7 +6,7 @@
     .modern-form {
         max-width: 600px;
         margin: 20px auto;
-        background: #faf9f9;
+        background: #ffffff;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -52,6 +52,20 @@
     .modern-form .btn-submit:hover {
         background-color: #0056b3;
     }
+
+    .modern-form .btn-submit.loading {
+        background-color: #f0ad4e;
+        cursor: not-allowed;
+    }
+
+    input[readonly] {
+        cursor: not-allowed;
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="red" width="24px" height="24px"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8 0-1.85.63-3.55 1.69-4.9L16.9 18.31C15.55 19.37 13.85 20 12 20zm6.31-3.1L7.1 5.69C8.45 4.63 10.15 4 12 4c4.42 0 8 3.58 8 8 0 1.85-.63 3.55-1.69 4.9z"/></svg>');
+        background-repeat: no-repeat;
+        background-position: right 10px center;
+        background-size: 20px 20px;
+        padding-right: 35px;
+    }
 </style>
 {% endblock %}
 
@@ -59,7 +73,7 @@
 <div class="regx-container">
     {% include "side_nav.html" %}
     <div class="main-content">
-        <h1>Update Company Details</h1>
+        <h1>Verify Company Details</h1>
         <form action="{{ url_for('regx.update_claim_form', company_id=company_obj[0]) }}" method="post"
             class="modern-form" id="update_claim_f">
             {{ h.csrf_input() }}
@@ -86,7 +100,6 @@
     </div>
 </div>
 <script>
-
     // Function to ensure website URL starts with https://
     function ensureHttps(url) {
         if (!url.startsWith('http://') && !url.startsWith('https://')) {
@@ -101,14 +114,17 @@
             websiteInput.value = ensureHttps(websiteInput.value);
         }
     });
-
-    // Handle OTP Submission
+    // Handle Claimaint Submission after verify details
     document.querySelector("#update_claim_f").addEventListener("submit", async function (e) {
         e.preventDefault();
         const form = e.target;
         const formData = new FormData(form);
-        const submitButton = form.querySelector(".update_claim_btn");
+        const submitButton = document.getElementById("update_claim_btn");
 
+        // Set button to loading state
+        submitButton.classList.add("loading");
+        submitButton.textContent = "Submitting...";
+        submitButton.disabled = true;
         try {
             const response = await fetch(form.action, {
                 method: form.method,
